small modifications, lots of added TODOs, further improvements on LockCommand including introduction of LockState enum, added SupportCommand, added DmCommand